--- a/client/angular.json
+++ b/client/angular.json
@@ -11,9 +11,15 @@
       "schematics": {},
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
             "aot": true,
+            "customWebpackConfig": {
+              "path": "webpack.config.js",
+              "mergeStrategies": {
+                "externals": "replace"
+              }
+            },
             "outputPath": "dist/cognito-email-auth-client",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -75,7 +81,7 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "browserTarget": "cognito-email-auth-client:build"
           },
