--- a/cognito/lambda-triggers/verify-auth-challenge-response/package.json
+++ b/cognito/lambda-triggers/verify-auth-challenge-response/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "create-auth-challenge",
+  "name": "verify-auth-challenge-response",
   "version": "1.0.0",
   "description": "",
-  "main": "create-auth-challenge.js",
+  "main": "verify-auth-challenge-response.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
